syntax="proto3";
package protos;

import "common.proto";

//alliance 联盟
message Alliance {
    int64 sid = 1;							//主键 联盟Id
	string name = 2;						//联盟名字
	string flag = 3;						//旗帜
	string allianceManifesto = 4;			//宣言
	string allianceMinName = 5;			//缩写
	string language = 6;					//语言
	int32 autoPermit = 7;					//招募状态
	int32 level = 8;						//级别
	int32 onlineNum = 9;					//在线人数
	bool leaderOnline = 10;				//帮主是否在线
	int64 allianceCombatPower = 11;		//联盟战斗力
	repeated int32 allianceXY = 12;					//联盟坐标
	string leaderName = 13;				//盟主名字
	int32 currNum = 14;					//当前数量
	int32 maxNum = 15;						//最大数量
	int32 superGiftPro = 16;				//大宝箱当前进度值
	int64 mailTime = 17;					//下次可发盟邮件时间
	int64 kingMailTime = 18;				//下次可发国王邮件时间
}
message AlliancePK {
    int64 sid = 1;							//主键 联盟Id
}

message AllianceSuperGift {
    int64 sid = 1;							//主键
    int32 cid = 2;							//大宝箱cid
	int64 allianceId = 3;	//联盟ID
}
message AllianceSuperGiftPK {
    int64 sid = 1;							//主键
}

// 联盟成员列表
message AllianceMember {
    int64 uid = 1;							//角色UID
	string name = 2;						//角色名字
	int32 level = 3;						//级别
	int32 post = 4;						//职位(1盟主2副主3官员4成员5见习)
	int64 power = 5;						//战力
	int32 contribution = 6;				//贡献
	int32 cityX = 7;						//主城坐标X
	int32 cityY = 8;						//主城坐标Y
	int64 loginTime = 9;					//0在线,非0上次离线时间
	int64 joinTime = 10;					//入盟时间
	int64 forbiddenWords = 11;				//禁言至时间
	int32 icon = 12;						//头像
	int64 allianceId = 13;					//联盟ID
	int64 superGiftSid = 14;				//大宝箱领至sid
	int32 iconB = 15;						//头像框
	//盟内排行
	int64 troopPower = 16;					//202 单只部队实力
	int64 hallLevel = 17;					//204 市政厅等级
	int64 rob = 18;						//205 掠夺资源总数
	int64 kill = 19;						//206 击杀士兵总数
	int64 devoteDaily = 20;				//207 日贡献
	int64 devoteWeekly = 21;				//208 周贡献
	int64 devote = 22;						//209 总贡献献
	
}
message AllianceMemberPK {
    int64 uid = 1;							//角色UID
}


// 联盟被申请列表
message AllianceApply {
	int64 uid = 1;							//申请人角色UID
	string name = 2;						//申请人角色名
    int32 icon  = 3;						//头像
    int32 level  = 4;						//级别
    int64 power  = 5;						//战力
	int64 time = 6;						//时间
	int64 allianceId = 7;	//联盟ID
}
message AllianceApplyPK {
	int64 uid = 1;							//主键
}

// 我发出的申请列表(联盟列表用)
message UserAllianceApply {
	int64 sid = 3;							//申请联盟ID
}
message UserAllianceApplyPK {
	int64 sid = 1;							//主键
}

// 联盟科技
message AllianceTech {
    int64 cid = 1;							//配置ID
    int32 level = 2;						//级别
    int32 exp = 3;							//经验进度
    bool recommend = 4;					//推荐
    int64 upTime = 5;						//升级完成时间(-1未在升级中)
	int64 allianceId = 6;	//联盟ID
}
message AllianceTechPK {
    int64 cid = 1;							//
}


// 联盟帮助列表
message AllianceHelp {
    int64 sid = 1;					//等于求助者队列ID
    int64 uid = 2;					//求助者角色UID
    int32 tp = 3;					//同Job(1建筑/升级 5疗兵 6科技)
    int32 cid = 4;					//Job配置id
    int32 toLevel = 5;				//队列目标级别
    int32 times = 6;				//己帮次数
    int32 maxTimes = 7;			//最大可帮次数
	int64 allianceId = 8;	//联盟ID
}
message AllianceHelpPK {
    int64 sid = 1;							//sid
}

message ReinforceLog {
	int64 sid = 1;
	string name = 2;//援方名字
	int32 num = 3; //数量
	int64 time = 4;//时间
}

message AllianceGift {
	int64 sid = 1;
	int32 cid = 2; //item_config.id
	int64 allianceId = 3;	//联盟ID
	string name = 4;//提供者名字
}
message AllianceGiftPK {
	int64 sid = 1;
}
// 联盟动态
message AllianceLog {
    int64 sid = 1;							//主键
    int64 cid = 2;							//类型
    int64 time = 3;						//时间
    string detail = 4;						//参数组 逗号分切 前端多语言拼
	int64 allianceId = 5;					//联盟ID
}

//以上数据结构-------------------------------------------------//
//-------------------------------------------------------------//
//以下协议-----------------------------------------------------//


//701 创建联盟
message AllianceCreate_C {
	int32 protoId = 1;//[default = 701];
	string name = 2;							//联盟名字
	string flag = 3;							//旗帜
	string allianceManifesto = 4;				//宣言
	string allianceMinName = 5;				//缩写
	string language = 6;						//语言
	int32 autoPermit = 7;						//招募状态(0自由加入 1审批加入 2无法加入)
}

//703 申请联盟
message AllianceApply_C {
	int32 protoId = 1;//[default = 703];
	int64 sid = 2;								//联盟Id
	bool cancel = 3;			//取消申请
}
//704 申请联盟返回
message AllianceApply_S {
	int32 protoId = 1;//[default = 704];
	int64 sid = 2;								//联盟Id
	int32 result = 3;							//申请结果 1成功加入 2等待审批
}

//705 退出联盟
message AllianceOut_C {
	int32 protoId = 1;//[default = 705];
}

//706 成功
message AllianceOut_S {
	int32 protoId = 1;//[default = 706];
	int64 allianceId = 2;							//联盟Id
	int32 flag = 3;								//退出方式 1自退,2被踢,3解散
}

//707 搜索联盟
message AllianceSelect_C {
	int32 protoId = 1;//[default = 707];			
	string	searchName = 2;						// 名字
}
message AllianceSelect_S {
	int32 protoId = 1;//[default = 708];			
	repeated Alliance alliance = 2;				//联盟信息
}


//709 一键加入
message AllianceAutoApply_C {
	int32 protoId = 1;//[default = 709];			
}

//711 审批申请
message AllianceApproval_C {
	int32 protoId = 1;//[default = 711];			
	int32 opt = 2;								// 1同意0不同意
	repeated int64 uids = 3;							// 申请列表
}


//713 查看成员列表
message AllianceMemberView_C {
	int32 protoId = 1;//[default = 713];
	int32 version = 2;							//版本号TODO
}

//715 任命职位
message AllianceAppoint_C {
	int32 protoId = 1;//[default = 715];	
	int64 uid = 2;								// 成员uid
	int32 post = 3;							// 成员职位(1盟主2副主3官员4成员5见习)
}

//717 更改招募状态
message AllianceSetPermit_C {
	int32 protoId = 1;//[default = 717];	
	int32 autoPermit = 2;						//招募状态(0自由加入 1审批加入 2无法加入)
}

//721 发送联盟邀请
message AllianceInvite_C {
	int32 protoId = 1;//[default = 721];	
	int64 uid = 2;							//按uid
	string name = 3;						//按名字
}

//723 联盟请求帮助
message AllianceNeedHelp_C {
	int32 protoId = 1;//[default = 723];	
	int64 jobID = 2;						//jobID
}

//725 联盟一键帮助
message AllianceHelp_C {
	int32 protoId = 1;//[default = 725];	
}

//727 科技推荐
message AllianceTechRecommend_C {
	int32 protoId = 1;//[default = 727];	
	int32 techID = 2;						//科技ID
	bool op = 3;//[default = true];		//推荐/取消推荐
}

//729 科技升级
message AllianceTechUpgrade_C {
	int32 protoId = 1;//[default = 729];	
	int32 techID = 2;						//科技ID
}

//731 联盟捐献
message AllianceDonate_C {
	int32 protoId = 1;//[default = 731];	
	int32 tp = 2;							//1捐资源2捐钻石
	int32 techID = 3;						//科技ID
}

//733 联盟踢人
message AllianceKick_C {
	int32 protoId = 1;//[default = 733];	
	int64 uid = 2;							//UID
}

//735 联盟修改公告
message AllianceRenotice_C {
	int32 protoId = 1;//[default = 735];	
	string notice = 2;						//公告
}

//737 联盟领取福利
message AllianceWelfare_C {
	int32 protoId = 1;//[default = 737];	
	int32 cid = 2;							//类型
}

//739 联盟商店
message AllianceShop_C {
	int32 protoId = 1;//[default = 739];	
	int32 cid = 2;							//商品ID
	int32 count = 3;						//购买次数
}

//740 联盟商店
message AllianceShop_S {
	int32 protoId = 1;//[default = 740];	
	int32 cid = 2;							//商品ID
	int32 num = 3;							//数量
}

//741 联盟禁言
message AllianceShutUp_C {
	int32 protoId = 1;//[default = 741];	
	int64 uid = 2;							//uid
	int32 time = 3;						//时间(秒)
}

//743 刷新科技
message AllianceTechView_C {
	int32 protoId = 1;//[default = 743];
	int32 version = 2;							//版本号TODO
}

//745 查看联盟数据
message AllianceView_C {
	int32 protoId = 1;//[default = 745];
	int64 allianceId = 2;							//联盟ID
}

//747 查看联盟礼物
message AllianceGiftList_C {
	int32 protoId = 1;//[default = 747];
	int32 offset = 2;		//偏移
	int32 limit = 3;//[default = 100];	//分组
}

//748 联盟礼物刷新
message AllianceGiftList_S {
	int32 protoId = 1;//[default = 748];
	int32 num = 2;		//未领总条数
}

//749 联盟礼物一键领取
message AllianceGiftGet_C {
	int32 protoId = 1;//[default = 749];
}

//750 联盟礼物刷新
message AllianceGiftGet_S {
	int32 protoId = 1;//[default = 750];
	int32 num = 2;		//未领总条数
	repeated protos.IdNum out = 3; //产出道具(宝箱类只计第一层)
}

//751 联盟大宝箱查看
message AllianceSuperGiftList_C {
	int32 protoId = 1;//[default = 751];
}

//753 联盟大宝箱领取
message AllianceSuperGiftGet_C {
	int32 protoId = 1;//[default = 753];
	int64 sid = 2;		//未领总的从小到大领
}

//754 联盟大宝箱领取
message AllianceSuperGiftGet_S {
	int32 protoId = 1;//[default = 754];
	repeated protos.IdNum out = 2; //产出道具(宝箱类只计第一层)
}

//755 联盟动态获取
message AllianceLogList_C {
	int32 protoId = 1;//[default = 755];
	int64 sid = 2;		//前端已有的最大sid
}

//756 联盟动态获取返回
message AllianceLogList_S {
	int32 protoId = 1;//[default = 756];
	repeated AllianceLog allianceLog = 2;		//联盟日志
}

//757 联盟改名
message AllianceRename_C {
	int32 protoId = 1;//[default = 757];
	string name = 2;		//新名字
}

//759 联盟改旗
message AllianceReflag_C {
	int32 protoId = 1;//[default = 759];
	string flag = 2;		//新旗号
}
